--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -43,6 +43,17 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
 
+  {% elif database == 'clickhouse' %}
+
+  clickhouse:
+    image: yandex/clickhouse-server:21.10
+    ports:
+      - 8123:8123
+    environment:
+      CLICKHOUSE_DB: gorse
+      CLICKHOUSE_USER: gorse
+      CLICKHOUSE_PASSWORD: gorse_pass
+
   {% endif %}
 
   worker:
@@ -97,6 +108,8 @@ services:
       GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
       {% elif database == 'mongo' %}
       GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
+      {% elif database == 'clickhouse' %}
+      GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse
       {% endif %}
     command: >
       -c /etc/gorse/config.toml 
@@ -114,6 +127,8 @@ services:
       - postgres
       {% elif database == 'mongo' %}
       - mongo
+      {% elif database == 'clickhouse' %}
+      - clickhouse
       {% endif %}
 
 volumes:
