--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -109,7 +109,7 @@ services:
       {% elif database == 'mongo' %}
       GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
       {% elif database == 'clickhouse' %}
-      GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse
+      GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse?mutations_sync=2
       {% endif %}
     command: >
       -c /etc/gorse/config.toml 
