--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -6,6 +6,8 @@ services:
     ports:
       - 6379:6379
 
+  {% if database == 'mysql' %}
+
   mysql:
     image: mysql/mysql-server
     restart: unless-stopped
@@ -19,41 +21,45 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
-  # postgres:
-  #   image: postgres:10.0
-  #   ports:
-  #     - 5432:5432
-  #   environment:
-  #     POSTGRES_DB: gorse
-  #     POSTGRES_USER: gorse
-  #     POSTGRES_PASSWORD: gorse_pass
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
+  {% elif database == 'postgres' %}
 
-  # mongo:
-  #   image: mongo:4.0
-  #   ports:
-  #     - 27017:27017
-  #   environment:
-  #     MONGO_INITDB_DATABASE: gorse
-  #     MONGO_INITDB_ROOT_USERNAME: root
-  #     MONGO_INITDB_ROOT_PASSWORD: password
-  #   volumes:
-  #     - mongo_data:/data/db
+  postgres:
+    image: postgres:10.0
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_DB: gorse
+      POSTGRES_USER: gorse
+      POSTGRES_PASSWORD: gorse_pass
 
-  # clickhouse:
-  #   image: yandex/clickhouse-server:21.10
-  #   ports:
-  #     - 8123:8123
-  #   environment:
-  #     CLICKHOUSE_DB: gorse
-  #     CLICKHOUSE_USER: gorse
-  #     CLICKHOUSE_PASSWORD: gorse_pass
-  #   volumes:
-  #     - clickhouse_data:/var/lib/clickhouse
+  {% elif database == 'mongo' %}
+
+  mongo:
+    image: mongo:4.0
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_DATABASE: gorse
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+
+  {% elif database == 'clickhouse' %}
+
+  clickhouse:
+    image: yandex/clickhouse-server:21.10
+    ports:
+      - 8123:8123
+    environment:
+      CLICKHOUSE_DB: gorse
+      CLICKHOUSE_USER: gorse
+      CLICKHOUSE_PASSWORD: gorse_pass
+
+  {% endif %}
 
   worker:
-    image: zhenghaoz/gorse-worker
+    build:
+      context: .
+      dockerfile: cmd/gorse-worker/Dockerfile
     restart: unless-stopped
     ports:
       - 8089:8089
@@ -69,7 +75,9 @@ services:
       - master
 
   server:
-    image: zhenghaoz/gorse-server
+    build:
+      context: .
+      dockerfile: cmd/gorse-server/Dockerfile
     restart: unless-stopped
     ports:
       - 8087:8087
@@ -85,17 +93,24 @@ services:
       - master
 
   master:
-    image: zhenghaoz/gorse-master
+    build:
+      context: .
+      dockerfile: cmd/gorse-master/Dockerfile
     restart: unless-stopped
     ports:
       - 8086:8086
       - 8088:8088
     environment:
       GORSE_CACHE_STORE: redis://redis:6379
+      {% if database == 'mysql' %}
       GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse
-      # GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
-      # GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
-      # GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse
+      {% elif database == 'postgres' %}
+      GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
+      {% elif database == 'mongo' %}
+      GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
+      {% elif database == 'clickhouse' %}
+      GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse?mutations_sync=2
+      {% endif %}
     command: >
       -c /etc/gorse/config.toml 
       --log-path /var/log/gorse/master.log 
@@ -106,17 +121,19 @@ services:
       - master_data:/var/lib/gorse
     depends_on:
       - redis
+      {% if database == 'mysql' %}
       - mysql
-      # - postgres
-      # - mongo
-      # - clickhouse
+      {% elif database == 'postgres' %}
+      - postgres
+      {% elif database == 'mongo' %}
+      - mongo
+      {% elif database == 'clickhouse' %}
+      - clickhouse
+      {% endif %}
 
 volumes:
+  mysql_data:
   worker_data:
   server_data:
   master_data:
   gorse_log:
-  mysql_data:
-  # postgres_data:
-  # mongo_data:
-  # clickhouse_data:
