--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -116,7 +116,7 @@ services:
       --log-path /var/log/gorse/master.log 
       --cache-path /var/lib/gorse/master_cache.data
     volumes:
-      - ./config/config.toml.template:/etc/gorse/config.toml
+      - ./config/config.toml:/etc/gorse/config.toml
       - gorse_log:/var/log/gorse
       - master_data:/var/lib/gorse
     depends_on:
