--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -63,6 +63,17 @@ services:
       timeout: 5s
       retries: 5
 
+  {% elif database == 'clickhouse' %}
+
+  clickhouse:
+    image: yandex/clickhouse-server:21.10
+    ports:
+      - 8123:8123
+    environment:
+      CLICKHOUSE_DB: gorse
+      CLICKHOUSE_USER: gorse
+      CLICKHOUSE_PASSWORD: gorse_pass
+
   {% endif %}
 
   worker:
@@ -117,6 +128,8 @@ services:
       GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
       {% elif database == 'mongo' %}
       GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
+      {% elif database == 'clickhouse' %}
+      GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse?mutations_sync=2
       {% endif %}
     command: >
       -c /etc/gorse/config.toml 
@@ -138,6 +151,9 @@ services:
       {% elif database == 'mongo' %}
       mongo:
         condition: service_healthy
+      - mongo
+      {% elif database == 'clickhouse' %}
+      - clickhouse
       {% endif %}
 
 volumes:
