--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -1,15 +1,5 @@
 version: "3"
 services:
-  redis:
-    image: redis/redis-stack:6.2.6-v9
-    restart: unless-stopped
-    ports:
-      - 6379:6379
-    healthcheck:
-      test: redis-cli ping
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   {% if database == 'mysql' %}
 
@@ -63,7 +53,7 @@ services:
       timeout: 5s
       retries: 5
 
-  {% elif database == 'clickhouse' %}
+  {% elif database == 'clickhouse+redis' %}
 
   clickhouse:
     image: clickhouse/clickhouse-server:22
@@ -75,6 +65,17 @@ services:
       CLICKHOUSE_PASSWORD: gorse_pass
     healthcheck:
       test: clickhouse-client --user $$CLICKHOUSE_USER --password $$CLICKHOUSE_PASSWORD --query "SELECT 1"
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis/redis-stack:6.2.6-v9
+    restart: unless-stopped
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: redis-cli ping
       interval: 10s
       timeout: 5s
       retries: 5
@@ -119,9 +120,6 @@ services:
       --http-host 0.0.0.0 --http-port 8087
       --log-path /var/log/gorse/server.log 
       --cache-path /var/lib/gorse/server_cache.data
-    volumes:
-      - gorse_log:/var/log/gorse
-      - server_data:/var/lib/gorse
     depends_on:
       - master
 
@@ -138,15 +136,21 @@ services:
       - 8086:8086
       - 8088:8088
     environment:
-      GORSE_CACHE_STORE: redis://redis:6379
       {% if database == 'mysql' %}
       GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse
+      GORSE_CACHE_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse
       {% elif database == 'postgres' %}
       GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
+      GORSE_CACHE_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
       {% elif database == 'mongo' %}
       GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
-      {% elif database == 'clickhouse' %}
+      GORSE_CACHE_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
+      {% elif database == 'clickhouse+redis' %}
       GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse?mutations_sync=2
+      GORSE_CACHE_STORE: redis://redis:6379
+      {% elif database == 'sqlite' %}
+      GORSE_DATA_STORE: sqlite3:///var/lib/gorse/data.sqlite3
+      GORSE_CACHE_STORE: sqlite3:///var/lib/gorse/cache.sqlite3
       {% endif %}
     command: >
       -c /etc/gorse/config.toml 
@@ -154,11 +158,7 @@ services:
       --cache-path /var/lib/gorse
     volumes:
       - ./config/config.toml:/etc/gorse/config.toml
-      - gorse_log:/var/log/gorse
-      - master_data:/var/lib/gorse
     depends_on:
-      redis:
-        condition: service_healthy
       {% if database == 'mysql' %}
       mysql:
         condition: service_healthy
@@ -168,14 +168,9 @@ services:
       {% elif database == 'mongo' %}
       mongo:
         condition: service_healthy
-      {% elif database == 'clickhouse' %}
+      {% elif database == 'clickhouse+redis' %}
       clickhouse:
         condition: service_healthy
+      redis:
+        condition: service_healthy
       {% endif %}
-
-volumes:
-  mysql_data:
-  worker_data:
-  server_data:
-  master_data:
-  gorse_log:
