--- a/client/docker-compose.yml.j2
+++ b/client/docker-compose.yml.j2
@@ -144,8 +144,8 @@ services:
       GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse?mutations_sync=2
       GORSE_CACHE_STORE: redis://redis:6379
       {% elif database == 'sqlite' %}
-      GORSE_DATA_STORE: sqlite3:///var/lib/gorse/data.sqlite3
-      GORSE_CACHE_STORE: sqlite3:///var/lib/gorse/cache.sqlite3
+      GORSE_DATA_STORE: sqlite:///var/lib/gorse/data.sqlite3
+      GORSE_CACHE_STORE: sqlite:///var/lib/gorse/cache.sqlite3
       {% endif %}
     command: >
       -c /etc/gorse/config.toml 
